fixed card wrapping

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -2,14 +2,15 @@
     background-color: transparent;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
     gap: 20px;
     margin: 20px;
+    justify-content: center;
 }
 
 @media screen and (max-width: 768px) {
     .card-container {
         flex-direction: column;
         align-items: center;
+        justify-content: flex-start;
     }
 }
